--- a/templates/input.html
+++ b/templates/input.html
@@ -1,13 +1,11 @@
 <div class="wrapper">
     
-    <form class="3.35.149.184/answer", method = "POST">       
+    <form class="/answer", method = "POST">       
       <h2 class="form-signin-heading">Input Num</h2>
       <input type="text" class="form-control" name="num1" placeholder="num1" required="" autofocus="" />
       <input type="text" class="form-control" name="num2" placeholder="num2" required=""/>      
-      <label class="checkbox">
-        <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
-      </label>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>   
+
+      <button class="btn btn-lg btn-primary btn-block" type="submit">result</button>   
     </form>
   </div>
 
