--- a/templates/input.html
+++ b/templates/input.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
     
-    <form class="/answer", method = "POST">       
+    <form action="/answer", method = "POST">       
       <h2 class="form-signin-heading">Input Num</h2>
       <input type="text" class="form-control" name="num1" placeholder="num1" required="" autofocus="" />
       <input type="text" class="form-control" name="num2" placeholder="num2" required=""/>      
