--- a/templates/answer.html
+++ b/templates/answer.html
@@ -3,7 +3,7 @@
 <div id="html-text" class="text">
   {{ answer }}
 </div>
-
+<!-- 
 <style>
     body {
   background: #222;
@@ -39,4 +39,4 @@ div, canvas {
   top: 60%;
   opacity: 0.9
 }
-</style>
+</style> -->
